<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewLabelBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/about_label_base"
        android:textSize="20sp"
        android:textColor="#0e0e0e"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewLabelAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/about_label_alarm"
        android:textSize="20sp"
        android:textColor="#0e0e0e"
        android:layout_below="@id/textViewLabelBase"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <TextView
            android:id="@+id/textViewAboutVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_application_verion"
            android:textSize="15sp"
            android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/textViewAboutEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_developer_email"
        android:textSize="15sp"
        android:layout_above="@id/textViewAboutVersion"/>

    <TextView
        android:id="@+id/textViewAboutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_developer_name"
        android:textSize="15sp"
        android:layout_above="@id/textViewAboutEmail"/>

    <TextView
        android:id="@+id/textViewAboutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_developer_label"
        android:textSize="15sp"
        android:layout_above="@+id/textViewAboutName"/>

</RelativeLayout>